# WPD

./: .gitignore  README.md  west.yml
app/: CMakeLists.txt  prj.conf
app/boards/: rpi_pico.overlay
app/src/: main.c
app/src/logging/: CMakeLists.txt  README.md  system_status_logger.c
app/src/modules/app_main/: README.md
app/src/modules/button/: CMakeLists.txt  README.md  button.c
app/src/modules/notification/: CMakeLists.txt  README.md  notification.c
app/src/modules/posture_engine/: CMakeLists.txt  README.md  posture_engine.c
app/src/modules/settings/: CMakeLists.txt  README.md  settings.c
app/src/modules/shell/: CMakeLists.txt  README.md  shell.c
app/src/zbus/: CMakeLists.txt  README.md  zbus_channels.c  zbus_channels.h
docs/: ARCHITECTURE.md
docs/adr/: 0001-remove-ble-standalone-device.md  0002-custom-i2c-imu-driver.md
drivers/sensor/: README.md
include/wpd/: README.md  button.h  config.h  posture.h  sensor.h  system_status.h
scripts/: README.md  build.ps1  find_modules.sh
tests/: README.md
tests/posture_engine/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
tests/posture_engine/src/: main.c
